Trying to fix some problems with timers while searching something in the input text. Removing some jQuery selectors referred to left '10px0', check the flickering is solved!

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -503,11 +503,9 @@ div[data-role=panel] p:first-of-type { /* It affects: SPA_MAP + SPA_CONTACT */
 #spa_map .footer > img:first-child { /* la flechita significa todas las 'img' con parent 'footer' */
     position: fixed;
     background-color: rgba(0, 0, 0, 0.44);
-    /*margin-left: 10px;*/
     padding: 6px;
     height: 50px !important;
     bottom: 70px;
-    /*left: 0px;*/
     left: 70px;
     display:none; /* It is not shown because it will be shown just in necessary cases*/
 }
@@ -623,11 +621,10 @@ div[data-role=panel] p:first-of-type { /* It affects: SPA_MAP + SPA_CONTACT */
     #spa_map .footer > img:first-child { /* la flechita significa todas las 'img' con parent 'footer' */
         height: 35px !important;
         bottom: 50px;
-        left: 95px;
+        left: 90px;
     }
     #floor_label {
         bottom: 50px;
-        /*left: 55px;*/ /* this value is algo used in evothings.eddystone.js, function: 'checkIfUserAtTheSameFloor' */
         white-space: nowrap;
     }
     #floor_label p {
